src/analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AdjetivoCalificativo
    AdjetivoIndefinido
    AdjetivoNumeralOrdinal
    AdverbioAfirmacion
    AdverbioCantidad
    AdverbioDuda
    AdverbioModo
    AdverbioNegacion
    AdverbioTiempo
    ConjuncionCoordinante
    ConjuncionSubordinantes
    Contraccion
    Interjeccion
    PronombreDemostrativo
    PronombreInterrogativo
    PronombreObjeto
    PronombrePosesivo
    Signo_Abrir_Llave
    Signo_Cerrar_Llave
    Signo_Coma
    Signo_Diagonal
    Signo_apostrofe
    Signo_comilla_simple
    Signo_dos_puntos
    Signo_exclamacion_abierto
    Signo_exclamacion_cerredo
    Signo_guion
    Signo_guion_bajo
    Signo_interrogacion_abierto
    Signo_interrogacion_cerrado
    Signo_parentecis_abierto
    Signo_parentecis_cerrado
    Signo_puntoycoma
    VerboPasado
    VerboPasadoParticipio
    VerboToBe

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> Oraciones
Rule 2     Oraciones -> Oracion
Rule 3     Oraciones -> Oraciones Oracion
Rule 4     Oracion -> PresenteSimple
Rule 5     Oracion -> PresenteParticipio
Rule 6     PresenteSimple -> PresenteSimpleStruct Sustantivo Signo_Punto
Rule 7     PresenteSimple -> PresenteSimpleStruct Signo_Punto
Rule 8     PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona AdverbioLugar Articulos Sustantivo Signo_Punto
Rule 9     PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona Sustantivo Signo_Punto
Rule 10    PresenteSimpleStruct -> PronombrePrimeraPersona VerboPresentePrimeraPersona
Rule 11    PresenteSimpleStruct -> PronombreTerceraPersona VerboPresenteTerceraPersona
Rule 12    PresenteSimpleStruct -> Sustantivo VerboPresenteTerceraPersona
Rule 13    PresenteSimpleStruct -> AdjetivosSujeto Sustantivo VerboPresenteTerceraPersona
Rule 14    PresenteParticipio -> VerboPresenteParticipio Sustantivo Signo_Punto
Rule 15    PasadoParticipio -> <empty>
Rule 16    FuturoParticipio -> <empty>
Rule 17    PresenteAdmirativo -> <empty>
Rule 18    PresenteInterrogativo -> <empty>
Rule 19    Articulos -> ArticuloDefinido
Rule 20    Articulos -> ArticuloIndefinido
Rule 21    AdjetivosSujeto -> AdjetivoPosesivo
Rule 22    AdjetivosSujeto -> AdjetivoDemostrativo
Rule 23    AdjetivosSujeto -> AdjetivoNumeralCardinal
Rule 24    Empty -> <empty>

Terminals, with rules where they appear

AdjetivoCalificativo : 
AdjetivoDemostrativo : 22
AdjetivoIndefinido   : 
AdjetivoNumeralCardinal : 23
AdjetivoNumeralOrdinal : 
AdjetivoPosesivo     : 21
AdverbioAfirmacion   : 
AdverbioCantidad     : 
AdverbioDuda         : 
AdverbioLugar        : 8
AdverbioModo         : 
AdverbioNegacion     : 
AdverbioTiempo       : 
ArticuloDefinido     : 19
ArticuloIndefinido   : 20
ConjuncionCoordinante : 
ConjuncionSubordinantes : 
Contraccion          : 
Interjeccion         : 
Preposicion          : 8 9
PronombreDemostrativo : 
PronombreInterrogativo : 
PronombreObjeto      : 
PronombrePosesivo    : 
PronombrePrimeraPersona : 10
PronombreTerceraPersona : 11
Signo_Abrir_Llave    : 
Signo_Cerrar_Llave   : 
Signo_Coma           : 
Signo_Diagonal       : 
Signo_Punto          : 6 7 8 9 14
Signo_apostrofe      : 
Signo_comilla_simple : 
Signo_dos_puntos     : 
Signo_exclamacion_abierto : 
Signo_exclamacion_cerredo : 
Signo_guion          : 
Signo_guion_bajo     : 
Signo_interrogacion_abierto : 
Signo_interrogacion_cerrado : 
Signo_parentecis_abierto : 
Signo_parentecis_cerrado : 
Signo_puntoycoma     : 
Sustantivo           : 6 8 9 12 13 14
VerboPasado          : 
VerboPasadoParticipio : 
VerboPresenteParticipio : 14
VerboPresentePrimeraPersona : 8 9 10
VerboPresenteTerceraPersona : 11 12 13
VerboToBe            : 
error                : 

Nonterminals, with rules where they appear

AdjetivosSujeto      : 13
Articulos            : 8
Empty                : 
FuturoParticipio     : 
Oracion              : 2 3
Oraciones            : 1 3
PasadoParticipio     : 
PresenteAdmirativo   : 
PresenteInterrogativo : 
PresenteParticipio   : 5
PresenteSimple       : 4
PresenteSimpleStruct : 6 7 8 9
Programa             : 0

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . Oraciones
    (2) Oraciones -> . Oracion
    (3) Oraciones -> . Oraciones Oracion
    (4) Oracion -> . PresenteSimple
    (5) Oracion -> . PresenteParticipio
    (6) PresenteSimple -> . PresenteSimpleStruct Sustantivo Signo_Punto
    (7) PresenteSimple -> . PresenteSimpleStruct Signo_Punto
    (8) PresenteSimple -> . PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona AdverbioLugar Articulos Sustantivo Signo_Punto
    (9) PresenteSimple -> . PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona Sustantivo Signo_Punto
    (14) PresenteParticipio -> . VerboPresenteParticipio Sustantivo Signo_Punto
    (10) PresenteSimpleStruct -> . PronombrePrimeraPersona VerboPresentePrimeraPersona
    (11) PresenteSimpleStruct -> . PronombreTerceraPersona VerboPresenteTerceraPersona
    (12) PresenteSimpleStruct -> . Sustantivo VerboPresenteTerceraPersona
    (13) PresenteSimpleStruct -> . AdjetivosSujeto Sustantivo VerboPresenteTerceraPersona
    (21) AdjetivosSujeto -> . AdjetivoPosesivo
    (22) AdjetivosSujeto -> . AdjetivoDemostrativo
    (23) AdjetivosSujeto -> . AdjetivoNumeralCardinal

    VerboPresenteParticipio shift and go to state 8
    PronombrePrimeraPersona shift and go to state 9
    PronombreTerceraPersona shift and go to state 10
    Sustantivo      shift and go to state 7
    AdjetivoPosesivo shift and go to state 12
    AdjetivoDemostrativo shift and go to state 13
    AdjetivoNumeralCardinal shift and go to state 14

    Programa                       shift and go to state 1
    Oraciones                      shift and go to state 2
    Oracion                        shift and go to state 3
    PresenteSimple                 shift and go to state 4
    PresenteParticipio             shift and go to state 5
    PresenteSimpleStruct           shift and go to state 6
    AdjetivosSujeto                shift and go to state 11

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> Oraciones .
    (3) Oraciones -> Oraciones . Oracion
    (4) Oracion -> . PresenteSimple
    (5) Oracion -> . PresenteParticipio
    (6) PresenteSimple -> . PresenteSimpleStruct Sustantivo Signo_Punto
    (7) PresenteSimple -> . PresenteSimpleStruct Signo_Punto
    (8) PresenteSimple -> . PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona AdverbioLugar Articulos Sustantivo Signo_Punto
    (9) PresenteSimple -> . PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona Sustantivo Signo_Punto
    (14) PresenteParticipio -> . VerboPresenteParticipio Sustantivo Signo_Punto
    (10) PresenteSimpleStruct -> . PronombrePrimeraPersona VerboPresentePrimeraPersona
    (11) PresenteSimpleStruct -> . PronombreTerceraPersona VerboPresenteTerceraPersona
    (12) PresenteSimpleStruct -> . Sustantivo VerboPresenteTerceraPersona
    (13) PresenteSimpleStruct -> . AdjetivosSujeto Sustantivo VerboPresenteTerceraPersona
    (21) AdjetivosSujeto -> . AdjetivoPosesivo
    (22) AdjetivosSujeto -> . AdjetivoDemostrativo
    (23) AdjetivosSujeto -> . AdjetivoNumeralCardinal

    $end            reduce using rule 1 (Programa -> Oraciones .)
    VerboPresenteParticipio shift and go to state 8
    PronombrePrimeraPersona shift and go to state 9
    PronombreTerceraPersona shift and go to state 10
    Sustantivo      shift and go to state 7
    AdjetivoPosesivo shift and go to state 12
    AdjetivoDemostrativo shift and go to state 13
    AdjetivoNumeralCardinal shift and go to state 14

    Oracion                        shift and go to state 15
    PresenteSimple                 shift and go to state 4
    PresenteParticipio             shift and go to state 5
    PresenteSimpleStruct           shift and go to state 6
    AdjetivosSujeto                shift and go to state 11

state 3

    (2) Oraciones -> Oracion .

    VerboPresenteParticipio reduce using rule 2 (Oraciones -> Oracion .)
    PronombrePrimeraPersona reduce using rule 2 (Oraciones -> Oracion .)
    PronombreTerceraPersona reduce using rule 2 (Oraciones -> Oracion .)
    Sustantivo      reduce using rule 2 (Oraciones -> Oracion .)
    AdjetivoPosesivo reduce using rule 2 (Oraciones -> Oracion .)
    AdjetivoDemostrativo reduce using rule 2 (Oraciones -> Oracion .)
    AdjetivoNumeralCardinal reduce using rule 2 (Oraciones -> Oracion .)
    $end            reduce using rule 2 (Oraciones -> Oracion .)


state 4

    (4) Oracion -> PresenteSimple .

    VerboPresenteParticipio reduce using rule 4 (Oracion -> PresenteSimple .)
    PronombrePrimeraPersona reduce using rule 4 (Oracion -> PresenteSimple .)
    PronombreTerceraPersona reduce using rule 4 (Oracion -> PresenteSimple .)
    Sustantivo      reduce using rule 4 (Oracion -> PresenteSimple .)
    AdjetivoPosesivo reduce using rule 4 (Oracion -> PresenteSimple .)
    AdjetivoDemostrativo reduce using rule 4 (Oracion -> PresenteSimple .)
    AdjetivoNumeralCardinal reduce using rule 4 (Oracion -> PresenteSimple .)
    $end            reduce using rule 4 (Oracion -> PresenteSimple .)


state 5

    (5) Oracion -> PresenteParticipio .

    VerboPresenteParticipio reduce using rule 5 (Oracion -> PresenteParticipio .)
    PronombrePrimeraPersona reduce using rule 5 (Oracion -> PresenteParticipio .)
    PronombreTerceraPersona reduce using rule 5 (Oracion -> PresenteParticipio .)
    Sustantivo      reduce using rule 5 (Oracion -> PresenteParticipio .)
    AdjetivoPosesivo reduce using rule 5 (Oracion -> PresenteParticipio .)
    AdjetivoDemostrativo reduce using rule 5 (Oracion -> PresenteParticipio .)
    AdjetivoNumeralCardinal reduce using rule 5 (Oracion -> PresenteParticipio .)
    $end            reduce using rule 5 (Oracion -> PresenteParticipio .)


state 6

    (6) PresenteSimple -> PresenteSimpleStruct . Sustantivo Signo_Punto
    (7) PresenteSimple -> PresenteSimpleStruct . Signo_Punto
    (8) PresenteSimple -> PresenteSimpleStruct . Preposicion VerboPresentePrimeraPersona AdverbioLugar Articulos Sustantivo Signo_Punto
    (9) PresenteSimple -> PresenteSimpleStruct . Preposicion VerboPresentePrimeraPersona Sustantivo Signo_Punto

    Sustantivo      shift and go to state 16
    Signo_Punto     shift and go to state 17
    Preposicion     shift and go to state 18


state 7

    (12) PresenteSimpleStruct -> Sustantivo . VerboPresenteTerceraPersona

    VerboPresenteTerceraPersona shift and go to state 19


state 8

    (14) PresenteParticipio -> VerboPresenteParticipio . Sustantivo Signo_Punto

    Sustantivo      shift and go to state 20


state 9

    (10) PresenteSimpleStruct -> PronombrePrimeraPersona . VerboPresentePrimeraPersona

    VerboPresentePrimeraPersona shift and go to state 21


state 10

    (11) PresenteSimpleStruct -> PronombreTerceraPersona . VerboPresenteTerceraPersona

    VerboPresenteTerceraPersona shift and go to state 22


state 11

    (13) PresenteSimpleStruct -> AdjetivosSujeto . Sustantivo VerboPresenteTerceraPersona

    Sustantivo      shift and go to state 23


state 12

    (21) AdjetivosSujeto -> AdjetivoPosesivo .

    Sustantivo      reduce using rule 21 (AdjetivosSujeto -> AdjetivoPosesivo .)


state 13

    (22) AdjetivosSujeto -> AdjetivoDemostrativo .

    Sustantivo      reduce using rule 22 (AdjetivosSujeto -> AdjetivoDemostrativo .)


state 14

    (23) AdjetivosSujeto -> AdjetivoNumeralCardinal .

    Sustantivo      reduce using rule 23 (AdjetivosSujeto -> AdjetivoNumeralCardinal .)


state 15

    (3) Oraciones -> Oraciones Oracion .

    VerboPresenteParticipio reduce using rule 3 (Oraciones -> Oraciones Oracion .)
    PronombrePrimeraPersona reduce using rule 3 (Oraciones -> Oraciones Oracion .)
    PronombreTerceraPersona reduce using rule 3 (Oraciones -> Oraciones Oracion .)
    Sustantivo      reduce using rule 3 (Oraciones -> Oraciones Oracion .)
    AdjetivoPosesivo reduce using rule 3 (Oraciones -> Oraciones Oracion .)
    AdjetivoDemostrativo reduce using rule 3 (Oraciones -> Oraciones Oracion .)
    AdjetivoNumeralCardinal reduce using rule 3 (Oraciones -> Oraciones Oracion .)
    $end            reduce using rule 3 (Oraciones -> Oraciones Oracion .)


state 16

    (6) PresenteSimple -> PresenteSimpleStruct Sustantivo . Signo_Punto

    Signo_Punto     shift and go to state 24


state 17

    (7) PresenteSimple -> PresenteSimpleStruct Signo_Punto .

    VerboPresenteParticipio reduce using rule 7 (PresenteSimple -> PresenteSimpleStruct Signo_Punto .)
    PronombrePrimeraPersona reduce using rule 7 (PresenteSimple -> PresenteSimpleStruct Signo_Punto .)
    PronombreTerceraPersona reduce using rule 7 (PresenteSimple -> PresenteSimpleStruct Signo_Punto .)
    Sustantivo      reduce using rule 7 (PresenteSimple -> PresenteSimpleStruct Signo_Punto .)
    AdjetivoPosesivo reduce using rule 7 (PresenteSimple -> PresenteSimpleStruct Signo_Punto .)
    AdjetivoDemostrativo reduce using rule 7 (PresenteSimple -> PresenteSimpleStruct Signo_Punto .)
    AdjetivoNumeralCardinal reduce using rule 7 (PresenteSimple -> PresenteSimpleStruct Signo_Punto .)
    $end            reduce using rule 7 (PresenteSimple -> PresenteSimpleStruct Signo_Punto .)


state 18

    (8) PresenteSimple -> PresenteSimpleStruct Preposicion . VerboPresentePrimeraPersona AdverbioLugar Articulos Sustantivo Signo_Punto
    (9) PresenteSimple -> PresenteSimpleStruct Preposicion . VerboPresentePrimeraPersona Sustantivo Signo_Punto

    VerboPresentePrimeraPersona shift and go to state 25


state 19

    (12) PresenteSimpleStruct -> Sustantivo VerboPresenteTerceraPersona .

    Sustantivo      reduce using rule 12 (PresenteSimpleStruct -> Sustantivo VerboPresenteTerceraPersona .)
    Signo_Punto     reduce using rule 12 (PresenteSimpleStruct -> Sustantivo VerboPresenteTerceraPersona .)
    Preposicion     reduce using rule 12 (PresenteSimpleStruct -> Sustantivo VerboPresenteTerceraPersona .)


state 20

    (14) PresenteParticipio -> VerboPresenteParticipio Sustantivo . Signo_Punto

    Signo_Punto     shift and go to state 26


state 21

    (10) PresenteSimpleStruct -> PronombrePrimeraPersona VerboPresentePrimeraPersona .

    Sustantivo      reduce using rule 10 (PresenteSimpleStruct -> PronombrePrimeraPersona VerboPresentePrimeraPersona .)
    Signo_Punto     reduce using rule 10 (PresenteSimpleStruct -> PronombrePrimeraPersona VerboPresentePrimeraPersona .)
    Preposicion     reduce using rule 10 (PresenteSimpleStruct -> PronombrePrimeraPersona VerboPresentePrimeraPersona .)


state 22

    (11) PresenteSimpleStruct -> PronombreTerceraPersona VerboPresenteTerceraPersona .

    Sustantivo      reduce using rule 11 (PresenteSimpleStruct -> PronombreTerceraPersona VerboPresenteTerceraPersona .)
    Signo_Punto     reduce using rule 11 (PresenteSimpleStruct -> PronombreTerceraPersona VerboPresenteTerceraPersona .)
    Preposicion     reduce using rule 11 (PresenteSimpleStruct -> PronombreTerceraPersona VerboPresenteTerceraPersona .)


state 23

    (13) PresenteSimpleStruct -> AdjetivosSujeto Sustantivo . VerboPresenteTerceraPersona

    VerboPresenteTerceraPersona shift and go to state 27


state 24

    (6) PresenteSimple -> PresenteSimpleStruct Sustantivo Signo_Punto .

    VerboPresenteParticipio reduce using rule 6 (PresenteSimple -> PresenteSimpleStruct Sustantivo Signo_Punto .)
    PronombrePrimeraPersona reduce using rule 6 (PresenteSimple -> PresenteSimpleStruct Sustantivo Signo_Punto .)
    PronombreTerceraPersona reduce using rule 6 (PresenteSimple -> PresenteSimpleStruct Sustantivo Signo_Punto .)
    Sustantivo      reduce using rule 6 (PresenteSimple -> PresenteSimpleStruct Sustantivo Signo_Punto .)
    AdjetivoPosesivo reduce using rule 6 (PresenteSimple -> PresenteSimpleStruct Sustantivo Signo_Punto .)
    AdjetivoDemostrativo reduce using rule 6 (PresenteSimple -> PresenteSimpleStruct Sustantivo Signo_Punto .)
    AdjetivoNumeralCardinal reduce using rule 6 (PresenteSimple -> PresenteSimpleStruct Sustantivo Signo_Punto .)
    $end            reduce using rule 6 (PresenteSimple -> PresenteSimpleStruct Sustantivo Signo_Punto .)


state 25

    (8) PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona . AdverbioLugar Articulos Sustantivo Signo_Punto
    (9) PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona . Sustantivo Signo_Punto

    AdverbioLugar   shift and go to state 28
    Sustantivo      shift and go to state 29


state 26

    (14) PresenteParticipio -> VerboPresenteParticipio Sustantivo Signo_Punto .

    VerboPresenteParticipio reduce using rule 14 (PresenteParticipio -> VerboPresenteParticipio Sustantivo Signo_Punto .)
    PronombrePrimeraPersona reduce using rule 14 (PresenteParticipio -> VerboPresenteParticipio Sustantivo Signo_Punto .)
    PronombreTerceraPersona reduce using rule 14 (PresenteParticipio -> VerboPresenteParticipio Sustantivo Signo_Punto .)
    Sustantivo      reduce using rule 14 (PresenteParticipio -> VerboPresenteParticipio Sustantivo Signo_Punto .)
    AdjetivoPosesivo reduce using rule 14 (PresenteParticipio -> VerboPresenteParticipio Sustantivo Signo_Punto .)
    AdjetivoDemostrativo reduce using rule 14 (PresenteParticipio -> VerboPresenteParticipio Sustantivo Signo_Punto .)
    AdjetivoNumeralCardinal reduce using rule 14 (PresenteParticipio -> VerboPresenteParticipio Sustantivo Signo_Punto .)
    $end            reduce using rule 14 (PresenteParticipio -> VerboPresenteParticipio Sustantivo Signo_Punto .)


state 27

    (13) PresenteSimpleStruct -> AdjetivosSujeto Sustantivo VerboPresenteTerceraPersona .

    Sustantivo      reduce using rule 13 (PresenteSimpleStruct -> AdjetivosSujeto Sustantivo VerboPresenteTerceraPersona .)
    Signo_Punto     reduce using rule 13 (PresenteSimpleStruct -> AdjetivosSujeto Sustantivo VerboPresenteTerceraPersona .)
    Preposicion     reduce using rule 13 (PresenteSimpleStruct -> AdjetivosSujeto Sustantivo VerboPresenteTerceraPersona .)


state 28

    (8) PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona AdverbioLugar . Articulos Sustantivo Signo_Punto
    (19) Articulos -> . ArticuloDefinido
    (20) Articulos -> . ArticuloIndefinido

    ArticuloDefinido shift and go to state 31
    ArticuloIndefinido shift and go to state 32

    Articulos                      shift and go to state 30

state 29

    (9) PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona Sustantivo . Signo_Punto

    Signo_Punto     shift and go to state 33


state 30

    (8) PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona AdverbioLugar Articulos . Sustantivo Signo_Punto

    Sustantivo      shift and go to state 34


state 31

    (19) Articulos -> ArticuloDefinido .

    Sustantivo      reduce using rule 19 (Articulos -> ArticuloDefinido .)


state 32

    (20) Articulos -> ArticuloIndefinido .

    Sustantivo      reduce using rule 20 (Articulos -> ArticuloIndefinido .)


state 33

    (9) PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona Sustantivo Signo_Punto .

    VerboPresenteParticipio reduce using rule 9 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona Sustantivo Signo_Punto .)
    PronombrePrimeraPersona reduce using rule 9 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona Sustantivo Signo_Punto .)
    PronombreTerceraPersona reduce using rule 9 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona Sustantivo Signo_Punto .)
    Sustantivo      reduce using rule 9 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona Sustantivo Signo_Punto .)
    AdjetivoPosesivo reduce using rule 9 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona Sustantivo Signo_Punto .)
    AdjetivoDemostrativo reduce using rule 9 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona Sustantivo Signo_Punto .)
    AdjetivoNumeralCardinal reduce using rule 9 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona Sustantivo Signo_Punto .)
    $end            reduce using rule 9 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona Sustantivo Signo_Punto .)


state 34

    (8) PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona AdverbioLugar Articulos Sustantivo . Signo_Punto

    Signo_Punto     shift and go to state 35


state 35

    (8) PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona AdverbioLugar Articulos Sustantivo Signo_Punto .

    VerboPresenteParticipio reduce using rule 8 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona AdverbioLugar Articulos Sustantivo Signo_Punto .)
    PronombrePrimeraPersona reduce using rule 8 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona AdverbioLugar Articulos Sustantivo Signo_Punto .)
    PronombreTerceraPersona reduce using rule 8 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona AdverbioLugar Articulos Sustantivo Signo_Punto .)
    Sustantivo      reduce using rule 8 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona AdverbioLugar Articulos Sustantivo Signo_Punto .)
    AdjetivoPosesivo reduce using rule 8 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona AdverbioLugar Articulos Sustantivo Signo_Punto .)
    AdjetivoDemostrativo reduce using rule 8 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona AdverbioLugar Articulos Sustantivo Signo_Punto .)
    AdjetivoNumeralCardinal reduce using rule 8 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona AdverbioLugar Articulos Sustantivo Signo_Punto .)
    $end            reduce using rule 8 (PresenteSimple -> PresenteSimpleStruct Preposicion VerboPresentePrimeraPersona AdverbioLugar Articulos Sustantivo Signo_Punto .)

